src/codata_.f90


real(c_double), protected, bind(C,name="BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN") :: &
BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN= !! 
real(c_double), protected, bind(C,name="U_BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN") :: &
U_BOLTZMANN_CONSTANT_IN_INVERSE_METER_PER_KELVIN= !! 

real(c_double), protected, bind(C,name="CHARACTERISTIC_IMPEDANCE_OF_VACUUM") :: &
CHARACTERISTIC_IMPEDANCE_OF_VACUUM= !! 
real(c_double), protected, bind(C,name="U_CHARACTERISTIC_IMPEDANCE_OF_VACUUM") :: &
U_CHARACTERISTIC_IMPEDANCE_OF_VACUUM= !! 

real(c_double), protected, bind(C,name="CLASSICAL_ELECTRON_RADIUS") :: &
CLASSICAL_ELECTRON_RADIUS= !! 
real(c_double), protected, bind(C,name="U_CLASSICAL_ELECTRON_RADIUS") :: &
U_CLASSICAL_ELECTRON_RADIUS= !! 

real(c_double), protected, bind(C,name="COMPTON_WAVELENGTH") :: &
COMPTON_WAVELENGTH= !! 
real(c_double), protected, bind(C,name="U_COMPTON_WAVELENGTH") :: &
U_COMPTON_WAVELENGTH= !! 

real(c_double), protected, bind(C,name="CONDUCTANCE_QUANTUM") :: &
CONDUCTANCE_QUANTUM= !! 
real(c_double), protected, bind(C,name="U_CONDUCTANCE_QUANTUM") :: &
U_CONDUCTANCE_QUANTUM= !! 

real(c_double), protected, bind(C,name="CONVENTIONAL_VALUE_OF_AMPERE_90") :: &
CONVENTIONAL_VALUE_OF_AMPERE_90= !! 
real(c_double), protected, bind(C,name="U_CONVENTIONAL_VALUE_OF_AMPERE_90") :: &
U_CONVENTIONAL_VALUE_OF_AMPERE_90= !! 

real(c_double), protected, bind(C,name="CONVENTIONAL_VALUE_OF_COULOMB_90") :: &
CONVENTIONAL_VALUE_OF_COULOMB_90= !! 
real(c_double), protected, bind(C,name="U_CONVENTIONAL_VALUE_OF_COULOMB_90") :: &
U_CONVENTIONAL_VALUE_OF_COULOMB_90= !! 

real(c_double), protected, bind(C,name="CONVENTIONAL_VALUE_OF_FARAD_90") :: &
CONVENTIONAL_VALUE_OF_FARAD_90= !! 
real(c_double), protected, bind(C,name="U_CONVENTIONAL_VALUE_OF_FARAD_90") :: &
U_CONVENTIONAL_VALUE_OF_FARAD_90= !! 

real(c_double), protected, bind(C,name="CONVENTIONAL_VALUE_OF_HENRY_90") :: &
CONVENTIONAL_VALUE_OF_HENRY_90= !! 
real(c_double), protected, bind(C,name="U_CONVENTIONAL_VALUE_OF_HENRY_90") :: &
U_CONVENTIONAL_VALUE_OF_HENRY_90= !! 

real(c_double), protected, bind(C,name="CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT") :: &
CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT= !! 
real(c_double), protected, bind(C,name="U_CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT") :: &
U_CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT= !! 

real(c_double), protected, bind(C,name="CONVENTIONAL_VALUE_OF_OHM_90") :: &
CONVENTIONAL_VALUE_OF_OHM_90= !! 
real(c_double), protected, bind(C,name="U_CONVENTIONAL_VALUE_OF_OHM_90") :: &
U_CONVENTIONAL_VALUE_OF_OHM_90= !! 

real(c_double), protected, bind(C,name="CONVENTIONAL_VALUE_OF_VOLT_90") :: &
CONVENTIONAL_VALUE_OF_VOLT_90= !! 
real(c_double), protected, bind(C,name="U_CONVENTIONAL_VALUE_OF_VOLT_90") :: &
U_CONVENTIONAL_VALUE_OF_VOLT_90= !! 

real(c_double), protected, bind(C,name="CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT") :: &
CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT= !! 
real(c_double), protected, bind(C,name="U_CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT") :: &
U_CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT= !! 

real(c_double), protected, bind(C,name="CONVENTIONAL_VALUE_OF_WATT_90") :: &
CONVENTIONAL_VALUE_OF_WATT_90= !! 
real(c_double), protected, bind(C,name="U_CONVENTIONAL_VALUE_OF_WATT_90") :: &
U_CONVENTIONAL_VALUE_OF_WATT_90= !! 

real(c_double), protected, bind(C,name="COPPER_X_UNIT") :: &
COPPER_X_UNIT= !! 
real(c_double), protected, bind(C,name="U_COPPER_X_UNIT") :: &
U_COPPER_X_UNIT= !! 

real(c_double), protected, bind(C,name="DEUTERON_ELECTRON_MAG__MOM__RATIO") :: &
DEUTERON_ELECTRON_MAG__MOM__RATIO= !! 
real(c_double), protected, bind(C,name="U_DEUTERON_ELECTRON_MAG__MOM__RATIO") :: &
U_DEUTERON_ELECTRON_MAG__MOM__RATIO= !! 

real(c_double), protected, bind(C,name="DEUTERON_ELECTRON_MASS_RATIO") :: &
DEUTERON_ELECTRON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_DEUTERON_ELECTRON_MASS_RATIO") :: &
U_DEUTERON_ELECTRON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="DEUTERON_G_FACTOR") :: &
DEUTERON_G_FACTOR= !! 
real(c_double), protected, bind(C,name="U_DEUTERON_G_FACTOR") :: &
U_DEUTERON_G_FACTOR= !! 

real(c_double), protected, bind(C,name="DEUTERON_MAG__MOM") :: &
DEUTERON_MAG__MOM= !! 
real(c_double), protected, bind(C,name="U_DEUTERON_MAG__MOM") :: &
U_DEUTERON_MAG__MOM= !! 

real(c_double), protected, bind(C,name="DEUTERON_MAG__MOM__TO_BOHR_MAGNETON_RATIO") :: &
DEUTERON_MAG__MOM__TO_BOHR_MAGNETON_RATIO= !! 
real(c_double), protected, bind(C,name="U_DEUTERON_MAG__MOM__TO_BOHR_MAGNETON_RATIO") :: &
U_DEUTERON_MAG__MOM__TO_BOHR_MAGNETON_RATIO= !! 

real(c_double), protected, bind(C,name="DEUTERON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO") :: &
DEUTERON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO= !! 
real(c_double), protected, bind(C,name="U_DEUTERON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO") :: &
U_DEUTERON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO= !! 

real(c_double), protected, bind(C,name="DEUTERON_MASS") :: &
DEUTERON_MASS= !! 
real(c_double), protected, bind(C,name="U_DEUTERON_MASS") :: &
U_DEUTERON_MASS= !! 

real(c_double), protected, bind(C,name="DEUTERON_MASS_ENERGY_EQUIVALENT") :: &
DEUTERON_MASS_ENERGY_EQUIVALENT= !! 
real(c_double), protected, bind(C,name="U_DEUTERON_MASS_ENERGY_EQUIVALENT") :: &
U_DEUTERON_MASS_ENERGY_EQUIVALENT= !! 

real(c_double), protected, bind(C,name="DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV") :: &
DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV= !! 
real(c_double), protected, bind(C,name="U_DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV") :: &
U_DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV= !! 

real(c_double), protected, bind(C,name="DEUTERON_MASS_IN_U") :: &
DEUTERON_MASS_IN_U= !! 
real(c_double), protected, bind(C,name="U_DEUTERON_MASS_IN_U") :: &
U_DEUTERON_MASS_IN_U= !! 

real(c_double), protected, bind(C,name="DEUTERON_MOLAR_MASS") :: &
DEUTERON_MOLAR_MASS= !! 
real(c_double), protected, bind(C,name="U_DEUTERON_MOLAR_MASS") :: &
U_DEUTERON_MOLAR_MASS= !! 

real(c_double), protected, bind(C,name="DEUTERON_NEUTRON_MAG__MOM__RATIO") :: &
DEUTERON_NEUTRON_MAG__MOM__RATIO= !! 
real(c_double), protected, bind(C,name="U_DEUTERON_NEUTRON_MAG__MOM__RATIO") :: &
U_DEUTERON_NEUTRON_MAG__MOM__RATIO= !! 

real(c_double), protected, bind(C,name="DEUTERON_PROTON_MAG__MOM__RATIO") :: &
DEUTERON_PROTON_MAG__MOM__RATIO= !! 
real(c_double), protected, bind(C,name="U_DEUTERON_PROTON_MAG__MOM__RATIO") :: &
U_DEUTERON_PROTON_MAG__MOM__RATIO= !! 

real(c_double), protected, bind(C,name="DEUTERON_PROTON_MASS_RATIO") :: &
DEUTERON_PROTON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_DEUTERON_PROTON_MASS_RATIO") :: &
U_DEUTERON_PROTON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="DEUTERON_RELATIVE_ATOMIC_MASS") :: &
DEUTERON_RELATIVE_ATOMIC_MASS= !! 
real(c_double), protected, bind(C,name="U_DEUTERON_RELATIVE_ATOMIC_MASS") :: &
U_DEUTERON_RELATIVE_ATOMIC_MASS= !! 

real(c_double), protected, bind(C,name="DEUTERON_RMS_CHARGE_RADIUS") :: &
DEUTERON_RMS_CHARGE_RADIUS= !! 
real(c_double), protected, bind(C,name="U_DEUTERON_RMS_CHARGE_RADIUS") :: &
U_DEUTERON_RMS_CHARGE_RADIUS= !! 

real(c_double), protected, bind(C,name="ELECTRON_CHARGE_TO_MASS_QUOTIENT") :: &
ELECTRON_CHARGE_TO_MASS_QUOTIENT= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_CHARGE_TO_MASS_QUOTIENT") :: &
U_ELECTRON_CHARGE_TO_MASS_QUOTIENT= !! 

real(c_double), protected, bind(C,name="ELECTRON_DEUTERON_MAG__MOM__RATIO") :: &
ELECTRON_DEUTERON_MAG__MOM__RATIO= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_DEUTERON_MAG__MOM__RATIO") :: &
U_ELECTRON_DEUTERON_MAG__MOM__RATIO= !! 

real(c_double), protected, bind(C,name="ELECTRON_DEUTERON_MASS_RATIO") :: &
ELECTRON_DEUTERON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_DEUTERON_MASS_RATIO") :: &
U_ELECTRON_DEUTERON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="ELECTRON_G_FACTOR") :: &
ELECTRON_G_FACTOR= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_G_FACTOR") :: &
U_ELECTRON_G_FACTOR= !! 

real(c_double), protected, bind(C,name="ELECTRON_GYROMAG__RATIO") :: &
ELECTRON_GYROMAG__RATIO= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_GYROMAG__RATIO") :: &
U_ELECTRON_GYROMAG__RATIO= !! 

real(c_double), protected, bind(C,name="ELECTRON_GYROMAG__RATIO_IN_MHZ_T") :: &
ELECTRON_GYROMAG__RATIO_IN_MHZ_T= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_GYROMAG__RATIO_IN_MHZ_T") :: &
U_ELECTRON_GYROMAG__RATIO_IN_MHZ_T= !! 

real(c_double), protected, bind(C,name="ELECTRON_HELION_MASS_RATIO") :: &
ELECTRON_HELION_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_HELION_MASS_RATIO") :: &
U_ELECTRON_HELION_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="ELECTRON_MAG__MOM") :: &
ELECTRON_MAG__MOM= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_MAG__MOM") :: &
U_ELECTRON_MAG__MOM= !! 

real(c_double), protected, bind(C,name="ELECTRON_MAG__MOM__ANOMALY") :: &
ELECTRON_MAG__MOM__ANOMALY= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_MAG__MOM__ANOMALY") :: &
U_ELECTRON_MAG__MOM__ANOMALY= !! 

real(c_double), protected, bind(C,name="ELECTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO") :: &
ELECTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO") :: &
U_ELECTRON_MAG__MOM__TO_BOHR_MAGNETON_RATIO= !! 

real(c_double), protected, bind(C,name="ELECTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO") :: &
ELECTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO") :: &
U_ELECTRON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO= !! 

real(c_double), protected, bind(C,name="ELECTRON_MASS") :: &
ELECTRON_MASS= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_MASS") :: &
U_ELECTRON_MASS= !! 

real(c_double), protected, bind(C,name="ELECTRON_MASS_ENERGY_EQUIVALENT") :: &
ELECTRON_MASS_ENERGY_EQUIVALENT= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_MASS_ENERGY_EQUIVALENT") :: &
U_ELECTRON_MASS_ENERGY_EQUIVALENT= !! 

real(c_double), protected, bind(C,name="ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV") :: &
ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV") :: &
U_ELECTRON_MASS_ENERGY_EQUIVALENT_IN_MEV= !! 

real(c_double), protected, bind(C,name="ELECTRON_MASS_IN_U") :: &
ELECTRON_MASS_IN_U= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_MASS_IN_U") :: &
U_ELECTRON_MASS_IN_U= !! 

real(c_double), protected, bind(C,name="ELECTRON_MOLAR_MASS") :: &
ELECTRON_MOLAR_MASS= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_MOLAR_MASS") :: &
U_ELECTRON_MOLAR_MASS= !! 

real(c_double), protected, bind(C,name="ELECTRON_MUON_MAG__MOM__RATIO") :: &
ELECTRON_MUON_MAG__MOM__RATIO= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_MUON_MAG__MOM__RATIO") :: &
U_ELECTRON_MUON_MAG__MOM__RATIO= !! 

real(c_double), protected, bind(C,name="ELECTRON_MUON_MASS_RATIO") :: &
ELECTRON_MUON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_MUON_MASS_RATIO") :: &
U_ELECTRON_MUON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="ELECTRON_NEUTRON_MAG__MOM__RATIO") :: &
ELECTRON_NEUTRON_MAG__MOM__RATIO= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_NEUTRON_MAG__MOM__RATIO") :: &
U_ELECTRON_NEUTRON_MAG__MOM__RATIO= !! 

real(c_double), protected, bind(C,name="ELECTRON_NEUTRON_MASS_RATIO") :: &
ELECTRON_NEUTRON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_NEUTRON_MASS_RATIO") :: &
U_ELECTRON_NEUTRON_MASS_RATIO= !! 

real(c_double), protected, bind(C,name="ELECTRON_PROTON_MAG__MOM__RATIO") :: &
ELECTRON_PROTON_MAG__MOM__RATIO= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_PROTON_MAG__MOM__RATIO") :: &
U_ELECTRON_PROTON_MAG__MOM__RATIO= !! 

real(c_double), protected, bind(C,name="ELECTRON_PROTON_MASS_RATIO") :: &
ELECTRON_PROTON_MASS_RATIO= !! 
real(c_double), protected, bind(C,name="U_ELECTRON_PROTON_MASS_RATIO") :: &
U_ELECTRON_PROTON_MASS_RATIO= !! 
